# sakura

./: .bzrignore  .gitignore  0  0.conf  0.hook  AUTHORS  CMakeLists.txt  GPL  INSTALL  Makefile  Makefile.in  README.md  config.h  config.mk  mobs.h  mobs.mk  sakura.desktop  sakura.pod
po/: CMakeLists.txt  POTFILES.in  ca.po  cs.po  de.po  en_GB.po  es.po  fr.po  he.po  hr.po  hu.po  it.po  ja.po  ka.po  ko.po  pl.po  pt.po  pt_BR.po  ru.po  sakura.pot  sv.po  tr.po  uk.po  zh_CN.po
src/: cfgpool.c  cfgpool.h  sakura  sakura.c  sakura.d  test
